Little "+" is missing in default layout preset "Compositing" #36271

Closed
opened 2013-07-24 17:36:35 +02:00 by Leon Cheung · 5 comments
Member

%%%--- Operating System, Graphics card ---
Win7 64bit | FX2700M

- Blender version with error, and version that worked ---

Blender 2.68 58558 and previous ones.

- Short description of error ---

When using default layout preset called “Compositing“, The little "+" icon (for eextending Tools panel) is just missing.

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Very intuitive, see the attached image. Thanks.

PS: I know, it's not so critical. Whatever, just point it out, which is expected to be "perfect" a bit, I suppose. :)%%%

%%%--- Operating System, Graphics card --- Win7 64bit | FX2700M - Blender version with error, and version that worked --- Blender 2.68 58558 and previous ones. - Short description of error --- When using default layout preset called “Compositing“, The little "+" icon (for eextending Tools panel) is just missing. - Steps for others to reproduce the error (preferably based on attached .blend file) --- Very intuitive, see the attached image. Thanks. PS: I know, it's not so critical. Whatever, just point it out, which is expected to be "perfect" a bit, I suppose. :)%%%
Author
Member

Changed status to: 'Open'

Changed status to: 'Open'

%%%This can be fixed, when we create a new startup.blend. Thanks for the report.%%%

%%%This can be fixed, when we create a new startup.blend. Thanks for the report.%%%

%%%I'll be on a laptop for until mid of august and laptop is not the best thing to save startup.blend from.

Also, saving new startup.blend is not gonna to fix all the issues, existing files might still missing (+).

Ton, probably it could be fixed with some flag being added when loading the file? If not, could you or cambo re-save the startup?%%%

%%%I'll be on a laptop for until mid of august and laptop is not the best thing to save startup.blend from. Also, saving new startup.blend is not gonna to fix all the issues, existing files might still missing (+). Ton, probably it could be fixed with some flag being added when loading the file? If not, could you or cambo re-save the startup?%%%

%%%This indeed is not a startup.blend issue, should be fixed in all files, committed version patch now, fix in svn revision 60011.%%%

%%%This indeed is not a startup.blend issue, should be fixed in all files, committed version patch now, fix in svn revision 60011.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
4 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36271
No description provided.