Fix #36271: missing (+) icon for toolbar in compositing layout in default startup.blend.